# pwn.college

./: LICENSE  README.md  chat.py  dojo.py  main.py  pyproject.toml
challenges/legacy/intro-to-cybersecurity/cryptography/aes-cbc-poa-enc/: solution.py
challenges/legacy/intro-to-cybersecurity/cryptography/aes-cbc-poa-singleblock/: solution.py
challenges/legacy/intro-to-cybersecurity/cryptography/ascii/: solution.py
challenges/legacy/intro-to-cybersecurity/cryptography/cpa/: solution.py
challenges/legacy/intro-to-cybersecurity/cryptography/cpa-http/: solution.py
challenges/legacy/intro-to-cybersecurity/cryptography/cpa-prefix/: solution.py
challenges/legacy/intro-to-cybersecurity/cryptography/cpa-suffix/: solution.py
challenges/legacy/intro-to-cybersecurity/cryptography/hex/: solution.exp
challenges/legacy/intro-to-cybersecurity/cryptography/strxor/: solution.py
challenges/legacy/intro-to-cybersecurity/integrated-security/secure-chat-1/: chat.py
challenges/legacy/intro-to-cybersecurity/integrated-security/secure-chat-2/: chat.py
challenges/legacy/intro-to-cybersecurity/integrated-security/secure-chat-3/: chat.py
challenges/legacy/intro-to-cybersecurity/integrated-security/secure-chat-4/: chat.py
challenges/legacy/intro-to-cybersecurity/integrated-security/web-overflow-client/: shellcode.py
challenges/legacy/intro-to-cybersecurity/intercepting-communication/level-14/: solution.py
challenges/legacy/intro-to-cybersecurity/reverse-engineering/cimg-animate/: cimgparse.py
workspace/home/hacker/: .bashrc  .vimrc
(+15 files in other folders)
